--- a/src/css/input.css
+++ b/src/css/input.css
@@ -8,7 +8,7 @@
     @apply bg-light-background font-poppins text-dark-gray dark:bg-dark-background  dark:text-light-gray;
   }
   .heading-1 {
-    @apply text-5 font-semibold leading-4 text-black dark:text-white md:text-6 md:leading-5 lg:text-7 lg:leading-6;
+    @apply text-5 font-semibold leading-4 text-black dark:text-white  lg:text-6 lg:leading-5 xl:text-7 xl:leading-6;
   }
 
   .heading-2 {
@@ -35,28 +35,73 @@
     @apply bg-gradient bg-clip-text  text-transparent;
   }
 
-  .transition-common {
-    @apply transition delay-100 ease-linear;
+  .section {
+    @apply my-16 lg:my-xl;
   }
 
-  .section-common {
-    @apply my-lg lg:my-xl;
-  }
-
-  .arrow-before {
+  .arrow {
     @apply before:absolute before:bottom-2 before:left-0 before:top-0 before:m-auto before:block before:h-3 before:w-3 before:rotate-45 before:border-b-2 before:border-r-2 before:border-dark-gray peer-checked/faq:before:bottom-0 peer-checked/faq:before:top-2 peer-checked/faq:before:-rotate-[135deg] dark:before:border-white;
   }
 
-  .custom-shadow_dark {
+  .button {
+    @apply md-text lg:lg-text relative mt-md inline-block items-center justify-center overflow-hidden rounded-2xl px-md py-sm font-medium text-white before:absolute before:left-0 before:top-0 before:h-full before:w-[200%] before:bg-gradient before:transition hover:before:-translate-x-1/3;
+  }
+
+  .input {
+    @apply sm-text  h-11 w-full rounded-[0.625rem] border border-light-gray bg-transparent px-md py-0 text-dark-gray dark:text-white;
+  }
+
+  .label {
+    @apply sm-text absolute left-0 top-0 flex h-full transform items-center pl-md transition-all group-focus-within/input:h-1/2 group-focus-within/input:-translate-y-full group-focus-within/input:pl-0 peer-valid/input:h-1/2 peer-valid/input:-translate-y-full peer-valid/input:pl-0;
+  }
+
+  .shadow-dark {
     box-shadow:
       -3.01333px 3.01333px 3.01333px 0px rgba(255, 255, 255, 0.39) inset,
       2.01px -2.01px 20px 0px rgba(214, 214, 214, 0.17) inset;
   }
 
-  .custom-shadow {
+  .shadow-light {
     box-shadow:
       -3.01333px 3.01333px 3.01333px 0px rgba(255, 255, 255, 0.39) inset,
       2.01px -2.01px 20px 0px rgba(214, 214, 214, 0.17) inset,
       0px 4px 20px 0px rgba(0, 0, 0, 0.1);
+  }
+
+  .shadow-main {
+    box-shadow: 0px 4px 20px 7px rgba(0, 0, 0, 0.06);
+  }
+
+  .border-gradient {
+    padding: 1px;
+    border-radius: 1px;
+    background-origin: border-box;
+    background-clip: content-box, border-box;
+  }
+
+  .border-light {
+    background-image: linear-gradient(#f2f2f2, #f2f2f2),
+      linear-gradient(94deg, #9b51e0 2.84%, #3081ed 99.18%);
+  }
+
+  .border-dark {
+    background-image: linear-gradient(#1f1d2b, #1f1d2b),
+      linear-gradient(94deg, #9b51e0 2.84%, #3081ed 99.18%);
+  }
+
+  .like-group {
+    @apply group/likes flex cursor-pointer items-center justify-end gap-1 stroke-dark-gray font-medium dark:stroke-light-gray;
+  }
+
+  .like-icon {
+    @apply fill-transparent transition group-hover/likes:fill-accent group-hover/likes:stroke-accent;
+  }
+
+  .advantages-block {
+    @apply md-text flex w-1/2 flex-col items-center justify-center gap-sm dark:text-white md:w-full md:gap-md;
+  }
+
+  .advantages-icon {
+    @apply md:w-2xl md:h-2xl shadow-light dark:shadow-dark flex h-28 w-28 items-center justify-center rounded-3xl bg-white/10 backdrop-blur-2xl;
   }
 }
